--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <a href="index.html"> <img src="images/logo.png" width="150"></a>
         </div>
         <div class="homehead">
-            <a href="anime1.html" target="_blank"> <img src="images/homehead1.png" alt="banner" width="800">
+            <a href="bluelock.html" target="_blank" class="banner-link">
+                <img src="images/homehead1.png" alt="banner" width="800">
             </a>
         </div>
         <nav class="navbar">
