--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
         </div>
         <nav class="navbar">
             <ul class="nav-links">
-                <li><a href="#">Anime</a></li>
+                <li class="dropdown">
+                    <a href="#">Anime</a>
+                    <div class="dropdown-content">
+                        <a href="#">Top Anime</a>
+                        <a href="#">Seasonal Anime</a>
+                        <a href="#">All Time Hits</a>
+                    </div>
+                </li>
                 <li><a href="#">Manga</a></li>
                 <li class="dropdown">
                     <a href="#">Community</a>
