--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
                         <a href="#">All Time Hits</a>
                     </div>
                 </li>
-                <li><a href="#">Manga</a></li>
+                <li><a href="#">Anime</a>
+                    <div class="dropdown-content">
+                        <a href="#">Top Anime</a>
+                        <a href="#">Seasonal Anime</a>
+                        <a href="#">All Time Hits</a>
+                    </li>
                 <li class="dropdown">
                     <a href="#">Community</a>
                     <div class="dropdown-content">
