--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a href="#">All Time Hits</a>
                     </div>
                 </li>
-                <li><a href="#">Anime</a>
+                <li><a href="#">Manga</a>
                     <div class="dropdown-content">
                         <a href="#">Top Anime</a>
                         <a href="#">Seasonal Anime</a>
