--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
                         <a href="#">All Time Hits</a>
                     </div>
                 </li>
-                <li><a href="#">Manga</a>
+                <li class="dropdown">
+                    <a href="#">Manga</a>
                     <div class="dropdown-content">
-                        <a href="#">Top Anime</a>
-                        <a href="#">Seasonal Anime</a>
+                        <a href="#">Top Manga</a>
+                        <a href="#">Seasonal Manga</a>
                         <a href="#">All Time Hits</a>
-                    </li>
+                    </div>
+                </li>
                 <li class="dropdown">
                     <a href="#">Community</a>
                     <div class="dropdown-content">
