--- a/index.html
+++ b/index.html
@@ -44,7 +44,15 @@
                         <a href="#">Events</a>
                     </div>
                 </li>
-                <li><a href="#">Industry</a></li>
+                <li class="dropdown">
+                    <a href="#">Industry</a>
+                    <div class="dropdown-content">
+                        <a href="#">News</a>
+                        <a href="#">Featured Articles</a>
+                        <a href="#">Characters</a>
+                        <a href="#">Companies</a>
+                    </div>
+                </li>
                 <li><a href="#">Watch</a></li>
                 <li><a href="#">Read</a></li>
                 <li><a href="#">Help</a></li>
