--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         <a href="#">Top Anime</a>
                         <a href="#">Seasonal Anime</a>
                         <a href="#">All Time Hits</a>
+                        <a href="#">Recommendations</a>
                     </div>
                 </li>
                 <li class="dropdown">
@@ -34,6 +35,7 @@
                         <a href="#">Top Manga</a>
                         <a href="#">Seasonal Manga</a>
                         <a href="#">All Time Hits</a>
+                        <a href="#">Recommendations</a>
                     </div>
                 </li>
                 <li class="dropdown">
