--- a/index.html
+++ b/index.html
@@ -57,7 +57,14 @@
                 </li>
                 <li><a href="#">Watch</a></li>
                 <li><a href="#">Read</a></li>
-                <li><a href="#">Help</a></li>
+                <li class="dropdown">
+                    <a href="#">Help</a>
+                    <div class="dropdown-content">
+                        <a href="#">Top Anime</a>
+                        <a href="#">Seasonal Anime</a>
+                        <a href="#">All Time Hits</a>
+                        <a href="#">Recommendations</a>
+                    </div>
             </ul>
             <div class="search-container">
                 <select>
