--- a/index.html
+++ b/index.html
@@ -77,6 +77,27 @@
             </div>
         </nav>
     </header>
+    <main>
+
+<div class="slider-container">
+    <div class="card"><a href="bluelock.html" style="text-decoration: none; color: inherit;">
+        <img src="images/blue lock.jpg" alt="Description of Image" style="display: block;">
+        <p style="margin-top: 5px; text-align: center;">Blue Lock</p>
+    </a></div>
+    <div class="card">Card 2</div>
+    <div class="card">Card 3</div>
+    <div class="card">Card 4</div>
+    <div class="card">Card 5</div>
+  </div>
+  
+        <a href="https://example.com" style="text-decoration: none; color: inherit;">
+            <img src="your-image-url.png" alt="Description of Image" style="display: block;">
+            <p style="margin-top: 5px; text-align: center;">Your descriptive text goes here</p>
+        </a>
+
+
+
+    </main>
 </body>
 
 </html>
