--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 
     <div class="card"><a href="bluelock.html" style="text-decoration: none; color: inherit;">
-        <img src="images/blue lock.jpg" alt="Description of Image" style="display: block;">
+        <img src="images/blue lock.jpg" alt="Description of Image" style="display: block; width: 300px; height: 200px;">
         <p style="margin-top: 5px; text-align: center;">Blue Lock</p>
     </a></div>
     <div class="card">Card 2</div>
