--- a/index.html
+++ b/index.html
@@ -79,16 +79,16 @@
     </header>
     <main>
 
-<div>
-    <span class="card"><a href="bluelock.html" style="text-decoration: none; color: inherit;">
+
+    <div class="card"><a href="bluelock.html" style="text-decoration: none; color: inherit;">
         <img src="images/blue lock.jpg" alt="Description of Image" style="display: block; width: 200px;">
         <p style="margin-top: 5px; text-align: center;">Blue Lock</p>
-    </a></span>
-    <span class="card">Card 2</span>
-    <span class="card">Card 3</span>
-    <span class="card">Card 4</span>
-    <span class="card">Card 5</span>
-</div>
+    </a></div>
+    <div class="card">Card 2</div>
+    <div class="card">Card 3</div>
+    <div class="card">Card 4</div>
+    <div class="card">Card 5</div>
+
   
         <a href="https://example.com" style="text-decoration: none; color: inherit;">
             <img src="your-image-url.png" alt="Description of Image" style="display: block;">
