--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <div>
     <div class="card"><a href="bluelock.html" style="text-decoration: none; color: inherit;">
         <img src="images/blue lock.jpg" alt="Description of Image" style="display: block; width: 200px;">
-        <p style="margin-top: 5px; text-align: center;">Blue Lock</p>
+        <p style="margin-top: 5px; text-align: left;">Blue Lock</p>
     </a></div>
     <div class="card">Card 2</div>
     <div class="card">Card 3</div>
