--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li class="dropdown">
                     <a href="#">Anime</a>
                     <div class="dropdown-content">
-                        <a href="#">Top Anime</a>
+                        <a href="pages/top-anime.html">Top Anime</a>
                         <a href="#">Seasonal Anime</a>
                         <a href="#">All Time Hits</a>
                         <a href="#">Recommendations</a>
