--- a/pages/index.html
+++ b/pages/index.html
@@ -80,14 +80,14 @@
     <main>
 
 
-    <div class="card"><a href="bluelock.html" style="text-decoration: none; color: inherit;">
+    <span class="card"><a href="bluelock.html" style="text-decoration: none; color: inherit;">
         <img src="images/blue lock.jpg" alt="Description of Image" style="display: block; width: 200px;">
         <p style="margin-top: 5px; text-align: left;">Blue Lock</p>
-    </a></div>
-    <div class="card">Card 2</div>
-    <div class="card">Card 3</div>
-    <div class="card">Card 4</div>
-    <div class="card">Card 5</div>
+    </a></span>
+    <span class="card">Card 2</span>
+    <span class="card">Card 3</span>
+    <span class="card">Card 4</span>
+    <span class="card">Card 5</span>
 
   
         <a href="https://example.com" style="text-decoration: none; color: inherit;">
