--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
         <img src="images/blue lock.jpg" alt="Description of Image" style="display: block; width: 200px;">
         <p style="margin-top: 5px; text-align: left;">Blue Lock</p>
     </a></span>
-    <span class="card">Kekkon suru tte, Hontou desu ka</span>
+    <span class="card"><a href="bluelock.html" style="text-decoration: none; color: inherit;">
+        <img src="images/blue lock.jpg" alt="Description of Image" style="display: block; width: 200px;">
+        <p style="margin-top: 5px; text-align: left;">Kekkon suru tte, Hontou desu ka</p>
+    </a></span><br>
     <span class="card">Card 3</span>
     <span class="card">Card 4</span>
     <span class="card">Card 5</span>
