--- a/index.html
+++ b/index.html
@@ -77,10 +77,11 @@
             </div>
         </nav>
     </header>
+
+
+
     <main>
-
-
-    <span class="card"><a href="bluelock.html" style="text-decoration: none; color: inherit;">
+        <!-- <span class="card"><a href="bluelock.html" style="text-decoration: none; color: inherit;">
         <img src="images/blue lock.jpg" alt="Description of Image" style="display: block; width: 200px;">
         <p style="margin-top: 5px; text-align: left;">Blue Lock</p>
     </a></span>
@@ -96,9 +97,40 @@
         <a href="https://example.com" style="text-decoration: none; color: inherit;">
             <img src="your-image-url.png" alt="Description of Image" style="display: block;">
             <p style="margin-top: 5px; text-align: center;">Your descriptive text goes here</p>
-        </a>
+        </a>-->
 
-
+        <div class="image-row">
+            <div class="image-container">
+                <a href="https://example1.com" target="_blank">
+                    <img src="https://via.placeholder.com/150" alt="Image 1">
+                    Image 1
+                </a>
+            </div>
+            <div class="image-container">
+                <a href="https://example2.com" target="_blank">
+                    <img src="https://via.placeholder.com/150" alt="Image 2">
+                    Image 2
+                </a>
+            </div>
+            <div class="image-container">
+                <a href="https://example3.com" target="_blank">
+                    <img src="https://via.placeholder.com/150" alt="Image 3">
+                    Image 3
+                </a>
+            </div>
+            <div class="image-container">
+                <a href="https://example4.com" target="_blank">
+                    <img src="https://via.placeholder.com/150" alt="Image 4">
+                    Image 4
+                </a>
+            </div>
+            <div class="image-container">
+                <a href="https://example5.com" target="_blank">
+                    <img src="https://via.placeholder.com/150" alt="Image 5">
+                    Image 5
+                </a>
+            </div>
+        </div>
 
     </main>
 </body>
