--- a/pages/top-anime.html
+++ b/pages/top-anime.html
@@ -1,4 +1,3 @@
-<!--#include virtual="index.html" -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Top Airing Anime Table</title>
-    <link rel="stylesheet" href="syles/top-anime.css">
+    <link rel="stylesheet" href="styles/top-anime.css">
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    <h2>Top Airing Anime</h2>
-    <header>
+
+    <header class="index">
         <div class="website_name">
             <a href="index.html"> <img src="images/logo.png" width="150"></a>
         </div>
@@ -78,6 +78,7 @@
             </div>
         </nav>
     </header>
+    <h2>Top Airing Anime</h2>
     <table>
         <tr>
             <th>Rank</th>
