--- a/index.html
+++ b/index.html
@@ -81,56 +81,39 @@
 
 
     <main>
-        <!-- <span class="card"><a href="bluelock.html" style="text-decoration: none; color: inherit;">
-        <img src="images/blue lock.jpg" alt="Description of Image" style="display: block; width: 200px;">
-        <p style="margin-top: 5px; text-align: left;">Blue Lock</p>
-    </a></span>
-    <span class="card"><a href="bluelock.html" style="text-decoration: none; color: inherit;">
-        <img src="images/blue lock.jpg" alt="Description of Image" style="display: block; width: 200px;">
-        <p style="margin-top: 5px; text-align: left;">Kekkon suru tte, Hontou desu ka</p>
-    </a></span><br>
-    <span class="card">Card 3</span>
-    <span class="card">Card 4</span>
-    <span class="card">Card 5</span>
-
-  
-        <a href="https://example.com" style="text-decoration: none; color: inherit;">
-            <img src="your-image-url.png" alt="Description of Image" style="display: block;">
-            <p style="margin-top: 5px; text-align: center;">Your descriptive text goes here</p>
-        </a>-->
-
-        <div class="image-row">
-            <div class="image-container">
-                <a href="https://example1.com" target="_blank">
-                    <img src="https://via.placeholder.com/150" alt="Image 1">
-                    Image 1
-                </a>
-            </div>
-            <div class="image-container">
-                <a href="https://example2.com" target="_blank">
-                    <img src="https://via.placeholder.com/150" alt="Image 2">
-                    Image 2
-                </a>
-            </div>
-            <div class="image-container">
-                <a href="https://example3.com" target="_blank">
-                    <img src="https://via.placeholder.com/150" alt="Image 3">
-                    Image 3
-                </a>
-            </div>
-            <div class="image-container">
-                <a href="https://example4.com" target="_blank">
-                    <img src="https://via.placeholder.com/150" alt="Image 4">
-                    Image 4
-                </a>
-            </div>
-            <div class="image-container">
-                <a href="https://example5.com" target="_blank">
-                    <img src="https://via.placeholder.com/150" alt="Image 5">
-                    Image 5
-                </a>
-            </div>
-        </div>
+ 
+<div class="card-row">
+    <div class="card">
+      <a href="https://example1.com" target="_blank">
+        <img src="https://via.placeholder.com/150x225" alt="Anime 1">
+        <div class="title">Dandadan</div>
+      </a>
+    </div>
+    <div class="card">
+      <a href="https://example2.com" target="_blank">
+        <img src="https://via.placeholder.com/150x225" alt="Anime 2">
+        <div class="title">Re:Zero 3rd Season</div>
+      </a>
+    </div>
+    <div class="card">
+      <a href="https://example3.com" target="_blank">
+        <img src="https://via.placeholder.com/150x225" alt="Anime 3">
+        <div class="title">Uzumaki</div>
+      </a>
+    </div>
+    <div class="card">
+      <a href="https://example4.com" target="_blank">
+        <img src="https://via.placeholder.com/150x225" alt="Anime 4">
+        <div class="title">Blue Lock vs. U-20 Japan</div>
+      </a>
+    </div>
+    <div class="card">
+      <a href="https://example5.com" target="_blank">
+        <img src="https://via.placeholder.com/150x225" alt="Anime 5">
+        <div class="title">Another Anime</div>
+      </a>
+    </div>
+  </div>
 
     </main>
 </body>
