--- a/temp.html
+++ b/temp.html
@@ -3,94 +3,103 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Image Row with Links</title>
+  <title>Static Anime Card Row with Hover Effect</title>
   <style>
-    /* Basic body styling */
-    body {
+    /* Basic styling */
+    main {
       font-family: Arial, sans-serif;
+      background-color: #121212;
+      color: #fff;
       display: flex;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
       margin: 0;
-      background-color: #f0f0f0;
     }
 
-    /* Container for image row */
-    .image-row {
+    /* Container for the row of cards */
+    .card-row {
       display: flex;
-      justify-content: center;
       gap: 20px;
-      flex-wrap: wrap;
       padding: 20px;
     }
 
-    /* Styling each image container */
-    .image-container {
-      text-align: center;
+    /* Individual card styling */
+    .card {
       width: 150px;
+      background-color: #222;
+      border-radius: 8px;
+      overflow: hidden;
+      position: relative;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+      text-align: center;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    /* Hover effect for the card */
+    .card:hover {
+      transform: scale(1.05); /* Slightly enlarges the card */
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4); /* Adds a deeper shadow */
     }
 
     /* Image styling */
-    .image-container img {
+    .card img {
       width: 100%;
       height: auto;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      transition: transform 0.3s;
+      display: block;
     }
 
-    /* Image hover effect */
-    .image-container img:hover {
-      transform: scale(1.05);
+    /* Title styling */
+    .card .title {
+      padding: 10px;
+      font-size: 14px;
+      background: rgba(0, 0, 0, 0.7);
+      color: #fff;
     }
 
     /* Link styling */
-    .image-container a {
+    .card a {
       text-decoration: none;
-      color: #333;
-      font-size: 16px;
+      color: inherit;
       display: block;
-      margin-top: 8px;
     }
 
-    /* Link hover effect */
-    .image-container a:hover {
-      color: #007bff;
+    .card a:hover .title {
+      color: #007bff; /* Optional hover effect for title */
     }
   </style>
 </head>
 <body>
 
-<div class="image-row">
-  <div class="image-container">
+<div class="card-row">
+  <div class="card">
     <a href="https://example1.com" target="_blank">
-      <img src="https://via.placeholder.com/150" alt="Image 1">
-      Image 1
+      <img src="https://via.placeholder.com/150x225" alt="Anime 1">
+      <div class="title">Dandadan</div>
     </a>
   </div>
-  <div class="image-container">
+  <div class="card">
     <a href="https://example2.com" target="_blank">
-      <img src="https://via.placeholder.com/150" alt="Image 2">
-      Image 2
+      <img src="https://via.placeholder.com/150x225" alt="Anime 2">
+      <div class="title">Re:Zero 3rd Season</div>
     </a>
   </div>
-  <div class="image-container">
+  <div class="card">
     <a href="https://example3.com" target="_blank">
-      <img src="https://via.placeholder.com/150" alt="Image 3">
-      Image 3
+      <img src="https://via.placeholder.com/150x225" alt="Anime 3">
+      <div class="title">Uzumaki</div>
     </a>
   </div>
-  <div class="image-container">
+  <div class="card">
     <a href="https://example4.com" target="_blank">
-      <img src="https://via.placeholder.com/150" alt="Image 4">
-      Image 4
+      <img src="https://via.placeholder.com/150x225" alt="Anime 4">
+      <div class="title">Blue Lock vs. U-20 Japan</div>
     </a>
   </div>
-  <div class="image-container">
+  <div class="card">
     <a href="https://example5.com" target="_blank">
-      <img src="https://via.placeholder.com/150" alt="Image 5">
-      Image 5
+      <img src="https://via.placeholder.com/150x225" alt="Anime 5">
+      <div class="title">Another Anime</div>
     </a>
   </div>
 </div>
