--- a/pages/top-anime.html
+++ b/pages/top-anime.html
@@ -1,3 +1,4 @@
+<!--#include virtual="index.html" -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,12 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Top Airing Anime Table</title>
-    <link rel="stylesheet" href="styles/top-anime.css">
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="syles/top-anime.css">
 </head>
 <body>
-
-    <header class="index">
+    <header>
         <div class="website_name">
             <a href="index.html"> <img src="images/logo.png" width="150"></a>
         </div>
