--- a/index.html
+++ b/index.html
@@ -78,10 +78,7 @@
         </nav>
     </header>
 
-
-
-    <main>
- 
+    <main class="main-container">
         <div class="card-row">
             <div class="card">
               <a href="https://example1.com" target="_blank">
@@ -114,7 +111,6 @@
               </a>
             </div>
           </div>
-
     </main>
 </body>
 
