--- a/index.html
+++ b/index.html
@@ -2,116 +2,118 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyAnimeList-Clone</title>
-    <link rel="stylesheet" href="styles/index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MyAnimeList-Clone</title>
+  <link rel="stylesheet" href="styles/index.css">
 </head>
 
 <body>
-    <header>
-        <div class="website_name">
-            <a href="index.html"> <img src="images/logo.png" width="150"></a>
-        </div>
-        <div class="homehead">
-            <a href="anime1.html" target="_blank" class="banner-link">
-                <img src="images/homehead1.png" alt="banner" width="800">
-            </a>
-        </div>
-        <nav class="navbar">
-            <ul class="nav-links">
-                <li class="dropdown">
-                    <a href="#">Anime</a>
-                    <div class="dropdown-content">
-                        <a href="pages/top-anime.html">Top Anime</a>
-                        <a href="#">Seasonal Anime</a>
-                        <a href="#">All Time Hits</a>
-                        <a href="#">Recommendations</a>
-                    </div>
-                </li>
-                <li class="dropdown">
-                    <a href="#">Manga</a>
-                    <div class="dropdown-content">
-                        <a href="#">Top Manga</a>
-                        <a href="#">Seasonal Manga</a>
-                        <a href="#">All Time Hits</a>
-                        <a href="#">Recommendations</a>
-                    </div>
-                </li>
-                <li class="dropdown">
-                    <a href="#">Community</a>
-                    <div class="dropdown-content">
-                        <a href="#">Forums</a>
-                        <a href="#">Clubs</a>
-                        <a href="#">Events</a>
-                    </div>
-                </li>
-                <li class="dropdown">
-                    <a href="#">Industry</a>
-                    <div class="dropdown-content">
-                        <a href="#">News</a>
-                        <a href="#">Featured Articles</a>
-                        <a href="#">Characters</a>
-                        <a href="#">Companies</a>
-                    </div>
-                </li>
-                <li><a href="#">Watch</a></li>
-                <li><a href="#">Read</a></li>
-                <li class="dropdown">
-                    <a href="#">Help</a>
-                    <div class="dropdown-content">
-                        <a href="pages/top-anime.html">Top Anime</a>
-                        <a href="#">Seasonal Anime</a>
-                        <a href="#">All Time Hits</a>
-                        <a href="#">Recommendations</a>
-                    </div>
-            </ul>
-            <div class="search-container">
-                <select>
-                    <option>All</option>
-                    <option>Anime</option>
-                    <option>Manga</option>
-                </select>
-                <input type="text" placeholder="Search Anime, Manga, and more...">
-                <button type="submit">🔍</button>
-            </div>
-        </nav>
-    </header>
-
-    <main class="main-container">
-        <div class="card-row">
-            <div class="card">
-              <a href="https://example1.com" target="_blank">
-                <img src="https://via.placeholder.com/150x225" alt="Anime 1">
-                <div class="title">Dandadan</div>
-              </a>
-            </div>
-            <div class="card">
-              <a href="https://example2.com" target="_blank">
-                <img src="https://via.placeholder.com/150x225" alt="Anime 2">
-                <div class="title">Re:Zero 3rd Season</div>
-              </a>
-            </div>
-            <div class="card">
-              <a href="https://example3.com" target="_blank">
-                <img src="https://via.placeholder.com/150x225" alt="Anime 3">
-                <div class="title">Uzumaki</div>
-              </a>
-            </div>
-            <div class="card">
-              <a href="https://example4.com" target="_blank">
-                <img src="https://via.placeholder.com/150x225" alt="Anime 4">
-                <div class="title">Blue Lock vs. U-20 Japan</div>
-              </a>
-            </div>
-            <div class="card">
-              <a href="https://example5.com" target="_blank">
-                <img src="https://via.placeholder.com/150x225" alt="Anime 5">
-                <div class="title">Another Anime</div>
-              </a>
-            </div>
+  <header>
+    <div class="website_name">
+      <a href="index.html"> <img src="images/logo.png" width="150"></a>
+    </div>
+    <div class="homehead">
+      <a href="anime1.html" target="_blank" class="banner-link">
+        <img src="images/homehead1.png" alt="banner" width="800">
+      </a>
+    </div>
+    <nav class="navbar">
+      <ul class="nav-links">
+        <li class="dropdown">
+          <a href="#">Anime</a>
+          <div class="dropdown-content">
+            <a href="pages/top-anime.html">Top Anime</a>
+            <a href="#">Seasonal Anime</a>
+            <a href="#">All Time Hits</a>
+            <a href="#">Recommendations</a>
           </div>
-    </main>
+        </li>
+        <li class="dropdown">
+          <a href="#">Manga</a>
+          <div class="dropdown-content">
+            <a href="#">Top Manga</a>
+            <a href="#">Seasonal Manga</a>
+            <a href="#">All Time Hits</a>
+            <a href="#">Recommendations</a>
+          </div>
+        </li>
+        <li class="dropdown">
+          <a href="#">Community</a>
+          <div class="dropdown-content">
+            <a href="#">Forums</a>
+            <a href="#">Clubs</a>
+            <a href="#">Events</a>
+          </div>
+        </li>
+        <li class="dropdown">
+          <a href="#">Industry</a>
+          <div class="dropdown-content">
+            <a href="#">News</a>
+            <a href="#">Featured Articles</a>
+            <a href="#">Characters</a>
+            <a href="#">Companies</a>
+          </div>
+        </li>
+        <li><a href="#">Watch</a></li>
+        <li><a href="#">Read</a></li>
+        <li class="dropdown">
+          <a href="#">Help</a>
+          <div class="dropdown-content">
+            <a href="pages/top-anime.html">Top Anime</a>
+            <a href="#">Seasonal Anime</a>
+            <a href="#">All Time Hits</a>
+            <a href="#">Recommendations</a>
+          </div>
+      </ul>
+      <div class="search-container">
+        <select>
+          <option>All</option>
+          <option>Anime</option>
+          <option>Manga</option>
+        </select>
+        <input type="text" placeholder="Search Anime, Manga, and more...">
+        <button type="submit">🔍</button>
+      </div>
+    </nav>
+  </header>
+
+  <main class="main-container">
+    <div class="card-row">
+      <div class="card">
+        <a href="pages/dandadan.html" target="_blank">
+          <img src="images/dandadan.png" alt="Anime 1">
+          <div class="title">Dandadan</div>
+        </a>
+      </div>
+      <div class="card">
+        <a href="https://example2.com" target="_blank">
+          <img src="https://via.placeholder.com/150x225" alt="Anime 2">
+          <div class="title">Re:Zero 3rd Season</div>
+        </a>
+      </div>
+      <div class="card">
+        <a href="https://example3.com" target="_blank">
+          <img src="https://via.placeholder.com/150x225" alt="Anime 3">
+          <div class="title">Uzumaki</div>
+        </a>
+      </div>
+      <div class="card">
+        <a href="https://example4.com" target="_blank">
+          <img src="https://via.placeholder.com/150x225" alt="Anime 4">
+          <div class="title">Blue Lock vs. U-20 Japan</div>
+        </a>
+      </div>
+      <div class="card">
+        <a href="https://example5.com" target="_blank">
+          <img src="https://via.placeholder.com/150x225" alt="Anime 5">
+          <div class="title">Another Anime</div>
+        </a>
+      </div>
+    </div>
+
+    
+  </main>
 </body>
 
 </html>
