--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     <main class="main-container">
         <div class="card-row">
             <div class="card">
-              <a href="https://example1.com" target="_blank">
-                <img src="https://via.placeholder.com/150x225" alt="Anime 1">
+              <a href="pages/dandadan.html" target="_blank">
+                <img src="images/dandadan.png" alt="Anime 1">
                 <div class="title">Dandadan</div>
               </a>
             </div>
