--- a/index.html
+++ b/index.html
@@ -111,6 +111,12 @@
                 <div class="title">Another Anime</div>
               </a>
             </div>
+            <div class="card">
+              <a href="https://example6.com" target="_blank">
+                <img src="https://via.placeholder.com/150x225" alt="Anime 5">
+                <div class="title">Banana Man</div>
+              </a>
+            </div>
           </div>
 
     </main>
