--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
             <div class="card">
               <a href="https://example2.com" target="_blank">
-                <img src="https://via.placeholder.com/150x225" alt="Anime 2">
+                <img src="images/Rezero.png" alt="Anime 2">
                 <div class="title">Re:Zero 3rd Season</div>
               </a>
             </div>
