--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
             <div class="card">
               <a href="https://example3.com" target="_blank">
-                <img src="https://via.placeholder.com/150x225" alt="Anime 3">
+                <img src="images/Uzumaki.png" alt="Anime 3">
                 <div class="title">Uzumaki</div>
               </a>
             </div>
