--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
     </header>
 
     <main class="main-container">
-      <div>Top Anime 24</div><br>
+      <div class="section-title">Top Anime 24</div>
+      <hr>
         <div class="card-row">
             <div class="card">
               <a href="pages/dandadan.html" target="_blank">
