--- a/index.html
+++ b/index.html
@@ -101,20 +101,20 @@
             </div>
             <div class="card">
               <a href="https://example4.com" target="_blank">
-                <img src="https://via.placeholder.com/150x225" alt="Anime 4">
+                <img src="images/bluelock.png" alt="Anime 4">
                 <div class="title">Blue Lock vs. U-20 Japan</div>
               </a>
             </div>
             <div class="card">
               <a href="https://example5.com" target="_blank">
-                <img src="https://via.placeholder.com/150x225" alt="Anime 5">
-                <div class="title">Another Anime</div>
+                <img src="images/bleach.png" alt="Anime 5">
+                <div class="title">Bleach: Sennen Kessen-hen - Soukoku-tan</div>
               </a>
             </div>
             <div class="card">
               <a href="https://example6.com" target="_blank">
-                <img src="https://via.placeholder.com/150x225" alt="Anime 5">
-                <div class="title">Banana Man</div>
+                <img src="images/dbdaima.png" alt="Anime 5">
+                <div class="title">Dragon Ball Daima</div>
               </a>
             </div>
           </div>
