--- a/index.html
+++ b/index.html
@@ -120,47 +120,49 @@
             </div>
           </div>
         </li>
+    </main>
     <!-- New Top Manga 24 Section -->
-    <div class="section-title">Top Manga 24</div>
-    <hr>
-    <div class="card-row">
-      <div class="card">
-        <a href="pages/manga1.html" target="_blank">
-          <img src="images/manga1.png" alt="Manga 1">
-          <div class="title">Manga Title 1</div>
-        </a>
-      </div>
-      <div class="card">
-        <a href="https://example7.com" target="_blank">
-          <img src="https://via.placeholder.com/150x225" alt="Manga 2">
-          <div class="title">Manga Title 2</div>
-        </a>
-      </div>
-      <div class="card">
-        <a href="https://example8.com" target="_blank">
-          <img src="https://via.placeholder.com/150x225" alt="Manga 3">
-          <div class="title">Manga Title 3</div>
-        </a>
-      </div>
-      <div class="card">
-        <a href="https://example9.com" target="_blank">
-          <img src="https://via.placeholder.com/150x225" alt="Manga 4">
-          <div class="title">Manga Title 4</div>
-        </a>
-      </div>
-      <div class="card">
-        <a href="https://example10.com" target="_blank">
-          <img src="https://via.placeholder.com/150x225" alt="Manga 5">
-          <div class="title">Manga Title 5</div>
-        </a>
-      </div>
-      <div class="card">
-        <a href="https://example11.com" target="_blank">
-          <img src="https://via.placeholder.com/150x225" alt="Manga 6">
-          <div class="title">Manga Title 6</div>
-        </a>
-      </div>
-    </div>
+    <main class="main-container">
+        <div class="section-title">Top Manga 24</div>
+        <hr>
+        <div class="card-row">
+        <div class="card">
+            <a href="pages/manga1.html" target="_blank">
+            <img src="images/manga1.png" alt="Manga 1">
+            <div class="title">Manga Title 1</div>
+            </a>
+        </div>
+        <div class="card">
+            <a href="https://example7.com" target="_blank">
+            <img src="https://via.placeholder.com/150x225" alt="Manga 2">
+            <div class="title">Manga Title 2</div>
+            </a>
+        </div>
+        <div class="card">
+            <a href="https://example8.com" target="_blank">
+            <img src="https://via.placeholder.com/150x225" alt="Manga 3">
+            <div class="title">Manga Title 3</div>
+            </a>
+        </div>
+        <div class="card">
+            <a href="https://example9.com" target="_blank">
+            <img src="https://via.placeholder.com/150x225" alt="Manga 4">
+            <div class="title">Manga Title 4</div>
+            </a>
+        </div>
+        <div class="card">
+            <a href="https://example10.com" target="_blank">
+            <img src="https://via.placeholder.com/150x225" alt="Manga 5">
+            <div class="title">Manga Title 5</div>
+            </a>
+        </div>
+        <div class="card">
+            <a href="https://example11.com" target="_blank">
+            <img src="https://via.placeholder.com/150x225" alt="Manga 6">
+            <div class="title">Manga Title 6</div>
+            </a>
+        </div>
+        </div>
   </main>
 </body>
 
