--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
         <div class="card-row">
         <div class="card">
             <a href="pages/manga1.html" target="_blank">
-            <img src="images/manga1.png" alt="Manga 1">
-            <div class="title">Manga Title 1</div>
+            <img src="images/bersek.png" alt="Bersek">
+            <div class="title">Bersek</div>
             </a>
         </div>
         <div class="card">
