--- a/index.html
+++ b/index.html
@@ -128,42 +128,41 @@
         <div class="card-row">
         <div class="card">
             <a href="pages/manga1.html" target="_blank">
-            <img src="images/bersek.png" alt="Bersek">
-            <div class="title">Bersek</div>
+            <img src="images/berserk.png" alt="Berserk">
+            <div class="title">Berserk</div>
             </a>
         </div>
         <div class="card">
             <a href="https://example7.com" target="_blank">
-            <img src="https://via.placeholder.com/150x225" alt="Manga 2">
-            <div class="title">Manga Title 2</div>
+            <img src="images/jojo.png" alt="JoJo no Kimyou na Bouken Part 7: Steel Ball Run">
+            <div class="title">JoJo no Kimyou na Bouken Part 7: Steel Ball Run</div>
             </a>
         </div>
         <div class="card">
             <a href="https://example8.com" target="_blank">
-            <img src="https://via.placeholder.com/150x225" alt="Manga 3">
-            <div class="title">Manga Title 3</div>
+            <img src="images/vagabond.png" alt="Vagabond">
+            <div class="title">Vagabond</div>
             </a>
         </div>
         <div class="card">
             <a href="https://example9.com" target="_blank">
-            <img src="https://via.placeholder.com/150x225" alt="Manga 4">
-            <div class="title">Manga Title 4</div>
+            <img src="images/onepiece.png" alt="One Piece">
+            <div class="title">One Piece</div>
             </a>
         </div>
         <div class="card">
             <a href="https://example10.com" target="_blank">
-            <img src="https://via.placeholder.com/150x225" alt="Manga 5">
-            <div class="title">Manga Title 5</div>
+            <img src="images/monster.png" alt="Monster">
+            <div class="title">Moster</div>
             </a>
         </div>
         <div class="card">
             <a href="https://example11.com" target="_blank">
-            <img src="https://via.placeholder.com/150x225" alt="Manga 6">
-            <div class="title">Manga Title 6</div>
+            <img src="images/slamdunk.png" alt="Slam Dunk">
+            <div class="title">Slam Dunk</div>
             </a>
         </div>
         </div>
   </main>
 </body>
-
 </html>
