--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="card">
               <a href="https://example5.com" target="_blank">
                 <img src="images/bleach.png" alt="Anime 5">
-                <div class="title">Bleach: Sennen Kessen-hen - Soukoku-tan</div>
+                <div class="title">Bleach: Sennen Kessen-hen...</div>
               </a>
             </div>
             <div class="card">
@@ -135,7 +135,7 @@
         <div class="card">
             <a href="https://example7.com" target="_blank">
             <img src="images/jojo.png" alt="JoJo no Kimyou na Bouken Part 7: Steel Ball Run">
-            <div class="title">JoJo no Kimyou na Bouken Part 7: Steel Ball Run</div>
+            <div class="title">JoJo no Kimyou na Bouken Part 7...</div>
             </a>
         </div>
         <div class="card">
