--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
     </header>
 
     <main class="main-container">
-      <div class="section-title">Top Anime 24</div>
+        <div class="section-header">
+            <div class="section-title">Popular Airing Anime</div>
+    </main>
+    <main class="main-container">
       <hr>
         <div class="card-row">
             <div class="card">
@@ -121,9 +124,12 @@
           </div>
         </li>
     </main>
-    <!-- New Top Manga 24 Section -->
+    <!-- Top Manga Section -->
     <main class="main-container">
-        <div class="section-title">Top Manga 24</div>
+        <div class="section-header">
+            <div class="section-title">Top Mangas</div>
+    </main>
+    <main class="main-container">
         <hr>
         <div class="card-row">
         <div class="card">
@@ -163,6 +169,6 @@
             </a>
         </div>
         </div>
-  </main>
+    </main>
 </body>
 </html>
