--- a/pages/top-anime.html
+++ b/pages/top-anime.html
@@ -1,4 +1,3 @@
-<!--#include virtual="index.html" -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Top Airing Anime Table</title>
-    <link rel="stylesheet" href="syles/top-anime.css">
+    <link rel="stylesheet" href="../styles/top-anime.css">
 </head>
 <body>
     <header>
         <div class="website_name">
-            <a href="index.html"> <img src="images/logo.png" width="150"></a>
+            <a href="index.html"> <img src="../images/logo.png" width="150"></a>
         </div>
         <div class="homehead">
             <a href="anime1.html" target="_blank" class="banner-link">
-                <img src="images/homehead1.png" alt="banner" width="800">
+                <img src="../../images/homehead1.png" alt="banner" width="800">
             </a>
         </div>
         <nav class="navbar">
@@ -65,6 +64,7 @@
                         <a href="#">All Time Hits</a>
                         <a href="#">Recommendations</a>
                     </div>
+                </li>
             </ul>
             <div class="search-container">
                 <select>
@@ -88,7 +88,7 @@
         </tr>
         <tr>
             <td class="rank">1</td>
-            <td class="title">Bleach: Sennen Kessen-hen - Soukoku-tan</td>
+            <td class="title" style="vertical-align: middle;"><img src="../images/image.png"></img><span> Kessen-hen - Soukoku-tan</span></td>
             <td class="score">9.01</td>
             <td class="score">N/A</td>
             <td><button class="button">Add to My List</button></td>
