--- a/pages/top-anime.html
+++ b/pages/top-anime.html
@@ -77,50 +77,138 @@
             </div>
         </nav>
     </header>
-    <h2>Top Airing Anime</h2>
-    <table>
-        <tr>
-            <th>Rank</th>
-            <th>Title</th>
-            <th>Score</th>
-            <th>Your Score</th>
-            <th>Status</th>
-        </tr>
-        <tr>
-            <td class="rank">1</td>
-            <td class="title" style="vertical-align: middle;"><img src="../images/image.png"></img><span> Kessen-hen - Soukoku-tan</span></td>
-            <td class="score">9.01</td>
-            <td class="score">N/A</td>
-            <td><button class="button">Add to My List</button></td>
-        </tr>
-        <tr>
-            <td class="rank">2</td>
-            <td class="title">Re:Zero kara Hajimeru Isekai Seikatsu 3rd Season</td>
-            <td class="score">8.86</td>
-            <td class="score">N/A</td>
-            <td><button class="button">Add to My List</button></td>
-        </tr>
-        <tr>
-            <td class="rank">3</td>
-            <td class="title">One Piece</td>
-            <td class="score">8.72</td>
-            <td class="score">N/A</td>
-            <td><button class="button">Add to My List</button></td>
-        </tr>
-        <tr>
-            <td class="rank">4</td>
-            <td class="title">Natsume Yuujinchou Shichi</td>
-            <td class="score">8.63</td>
-            <td class="score">N/A</td>
-            <td><button class="button">Add to My List</button></td>
-        </tr>
-        <tr>
-            <td class="rank">5</td>
-            <td class="title">Dandadan</td>
-            <td class="score">8.63</td>
-            <td class="score">N/A</td>
-            <td><button class="button">Add to My List</button></td>
-        </tr>
-    </table>
+    <div class="container">
+        <h2>Top Anime Series</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Rank</th>
+                    <th>Title</th>
+                    <th>Score</th>
+                    <th>Your Score</th>
+                    <th>Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="rank">1</td>
+                    <td class="title">
+                        <img src="../images/sousuo.png" alt="Sousuo">
+                        <div>
+                            <span> Sousou no Frieren </span>
+                            <span class="subtext">TV (28 eps)<br> Sep 2023 - Mar 2024</span>
+                        </div>
+                    </td>
+                    <td class="score">9.16</td>
+                    <td class="user-score">N/A</td>
+                    <td><button>Add to My List</button></td>
+                </tr>
+                <tr>
+                    <td class="rank">2</td>
+                    <td class="title">
+                        <img src="../images/onepiecfanletter.png" alt="One Piece Fan Letter">
+                        <div>
+                            <span> One Piece Fan Letter </span>
+                            <span class="subtext">TV Special (1 ep)<br> Oct 2024</span>
+                        </div>
+                    </td>
+                    <td class="score">9.09</td>
+                    <td class="user-score">N/A</td>
+                    <td><button>Add to My List</button></td>
+                </tr>
+                <tr>
+                    <td class="rank">3</td>
+                    <td class="title">
+                        <img src="../images/fullmetal.png" alt="Fullmetal Alchemist: Brotherhood">
+                        <div>
+                            <span> Fullmetal Alchemist: Brotherhood </span>
+                            <span class="subtext">TV (64 eps)<br> Apr 2009 - Jul 2010</span>
+                        </div>
+                    </td>
+                    <td class="score">9.09</td>
+                    <td class="user-score">N/A</td>
+                    <td><button>Add to My List</button></td>
+                </tr>
+                <tr>
+                    <td class="rank">4</td>
+                    <td class="title">
+                        <img src="../images/steinsgate.png" alt="Steins;Gate">
+                        <div>
+                            <span> Steins;Gate </span>
+                            <span class="subtext">TV (24 eps)<br> Apr 2011 - Sep 2011</span>
+                        </div>
+                    </td>
+                    <td class="score">9.07</td>
+                    <td class="user-score">N/A</td>
+                    <td><button>Add to My List</button></td>
+                </tr>
+                <tr>
+                    <td class="rank">5</td>
+                    <td class="title">
+                        <img src="../images/shingeki.png" alt="Shingeki no Kyojin Season 3 Part 2">
+                        <div>
+                            <span> Shingeki no Kyojin Season 3 Part 2 </span>
+                            <span class="subtext">TV (10 eps)<br> Apr 2019 - Jul 2019</span>
+                        </div>
+                    </td>
+                    <td class="score">9.05</td>
+                    <td class="user-score">N/A</td>
+                    <td><button>Add to My List</button></td>
+                </tr>
+                <tr>
+                    <td class="rank">6</td>
+                    <td class="title">
+                        <img src="../images/gintama.png" alt="Gintama°">
+                        <div>
+                            <span> Gintama° </span>
+                            <span class="subtext">TV (51 eps)<br> Apr 2011 - Mar 2012</span>
+                        </div>
+                    </td>
+                    <td class="score">9.05</td>
+                    <td class="user-score">N/A</td>
+                    <td><button>Add to My List</button></td>
+                </tr>
+                <tr>
+                    <td class="rank">7</td>
+                    <td class="title">
+                        <img src="../images/gintamathefinal.png" alt="Gintama: The Final">
+                        <div>
+                            <span> Gintama: The Final </span>
+                            <span class="subtext">Movie (1 eps)<br> Jan 2021 - Jan 2021</span>
+                        </div>
+                    </td>
+                    <td class="score">9.04</td>
+                    <td class="user-score">N/A</td>
+                    <td><button>Add to My List</button></td>
+                </tr>
+                <tr>
+                    <td class="rank">8</td>
+                    <td class="title">
+                        <img src="../images/gintama'.png" alt="Gintama'">
+                        <div>
+                            <span> Gintama' </span>
+                            <span class="subtext">TV (51 eps)<br> Apr 2011 - Mar 2012</span>
+                        </div>
+                    </td>
+                    <td class="score">9.03</td>
+                    <td class="user-score">N/A</td>
+                    <td><button>Add to My List</button></td>
+                </tr>
+                <tr>
+                    <td class="rank">9</td>
+                    <td class="title">
+                        <img src="../images/hunterhunter.png" alt="Hunter x Hunter (2011)">
+                        <div>
+                            <span> Hunter x Hunter (2011) </span>
+                            <span class="subtext">TV (148 eps)<br> Oct 2011 - Sep 2014</span>
+                        </div>
+                    </td>
+                    <td class="score">9.03</td>
+                    <td class="user-score">N/A</td>
+                    <td><button>Add to My List</button></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
