--- a/pages/top-anime.html
+++ b/pages/top-anime.html
@@ -207,6 +207,19 @@
                     <td class="user-score">N/A</td>
                     <td><button>Add to My List</button></td>
                 </tr>
+                <tr>
+                    <td class="rank">10</td>
+                    <td class="title">
+                        <img src="../images/gintamaenchousen.png" alt="Gintama': Enchousen">
+                        <div>
+                            <span> Gintama': Enchousen </span>
+                            <span class="subtext">TV (13 eps)<br> Oct 2012 - Mar 2013</span>
+                        </div>
+                    </td>
+                    <td class="score">9.02</td>
+                    <td class="user-score">N/A</td>
+                    <td><button>Add to My List</button></td>
+                </tr>
             </tbody>
         </table>
     </div>
