--- a/pages/top-anime.html
+++ b/pages/top-anime.html
@@ -14,7 +14,7 @@
         </div>
         <div class="homehead">
             <a href="anime1.html" target="_blank" class="banner-link">
-                <img src="../../images/homehead1.png" alt="banner" width="800">
+                <img src="../images/homehead1.png" alt="banner" width="800">
             </a>
         </div>
         <nav class="navbar">
