--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
           <div class="footer-social">
             <p>Follow Us</p>
             <div class="social-icons">
-              <a href="#">Facebook</a>
-              <a href="#">Twitter</a>
-              <a href="#">Instagram</a>
-              <a href="#">Discord</a>
+              <a href="#"><img src="images/facebook.png" width=40px alt="Facebook"></a>
+              <a href="#"><img src="images/twitter.png" width=40px alt="Twitter"></a>
+              <a href="#"><img src="images/instagram.png" width=40px alt="Instagram"></a>
+              <a href="#"><img src="images/discord.png" width=40px alt="Discord"></a>
             </div>
           </div>
           <div class="footer-links">
