--- a/pages/top-anime.html
+++ b/pages/top-anime.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="website_name">
-            <a href="index.html"> <img src="../images/logo.png" width="150"></a>
+            <a href="../index.html"> <img src="../images/logo.png" width="150"></a>
         </div>
         <div class="homehead">
             <a href="anime1.html" target="_blank" class="banner-link">
@@ -56,15 +56,7 @@
                 </li>
                 <li><a href="#">Watch</a></li>
                 <li><a href="#">Read</a></li>
-                <li class="dropdown">
-                    <a href="#">Help</a>
-                    <div class="dropdown-content">
-                        <a href="pages/top-anime.html">Top Anime</a>
-                        <a href="#">Seasonal Anime</a>
-                        <a href="#">All Time Hits</a>
-                        <a href="#">Recommendations</a>
-                    </div>
-                </li>
+                <li><a href="#">Help</a></li>
             </ul>
             <div class="search-container">
                 <select>
