--- a/index.html
+++ b/index.html
@@ -57,14 +57,7 @@
                 </li>
                 <li><a href="#">Watch</a></li>
                 <li><a href="#">Read</a></li>
-                <li class="dropdown">
-                    <a href="#">Help</a>
-                    <div class="dropdown-content">
-                        <a href="pages/top-anime.html">Top Anime</a>
-                        <a href="#">Seasonal Anime</a>
-                        <a href="#">All Time Hits</a>
-                        <a href="#">Recommendations</a>
-                    </div>
+                <li><a href="#">Help</a></li>
             </ul>
             <div class="search-container">
                 <select>
