--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <header>
         <div class="website_name">
-            <a href="index.html"> <img src="images/logo.png" width="150"></a>
+            <a href="index.html"> <img src="../images/logo.png" width="150"></a>
         </div>
         <div class="homehead">
             <a href="anime1.html" target="_blank" class="banner-link">
-                <img src="images/homehead1.png" alt="banner" width="800">
+                <img src="../images/homehead1.png" alt="banner" width="800">
             </a>
         </div>
         <nav class="navbar">
@@ -33,7 +33,7 @@
                     <a href="#">Manga</a>
                     <div class="dropdown-content">
                         <a href="#">Top Manga</a>
-                        <a href="#">Seasonal Manga</a>
+                        <a href="pages/seasonal_manga">Seasonal Manga</a>
                         <a href="#">All Time Hits</a>
                         <a href="#">Recommendations</a>
                     </div>
@@ -80,37 +80,37 @@
         <div class="card-row">
             <div class="card">
               <a href="pages/dandadan.html" target="_blank">
-                <img src="images/dandadan.png" alt="Anime 1">
+                <img src="../images/dandadan.png" alt="Anime 1">
                 <div class="title">Dandadan</div>
               </a>
             </div>
             <div class="card">
               <a href="https://example2.com" target="_blank">
-                <img src="images/Rezero.png" alt="Anime 2">
+                <img src="../images/Rezero.png" alt="Anime 2">
                 <div class="title">Re:Zero 3rd Season</div>
               </a>
             </div>
             <div class="card">
               <a href="https://example3.com" target="_blank">
-                <img src="images/Uzumaki.png" alt="Anime 3">
+                <img src="../images/Uzumaki.png" alt="Anime 3">
                 <div class="title">Uzumaki</div>
               </a>
             </div>
             <div class="card">
               <a href="https://example4.com" target="_blank">
-                <img src="images/bluelock.png" alt="Anime 4">
+                <img src="../images/bluelock.png" alt="Anime 4">
                 <div class="title">Blue Lock vs. U-20 Japan</div>
               </a>
             </div>
             <div class="card">
               <a href="https://example5.com" target="_blank">
-                <img src="images/bleach.png" alt="Anime 5">
+                <img src="../images/bleach.png" alt="Anime 5">
                 <div class="title">Bleach: Sennen Kessen-hen...</div>
               </a>
             </div>
             <div class="card">
               <a href="https://example6.com" target="_blank">
-                <img src="images/dbdaima.png" alt="Anime 5">
+                <img src="../images/dbdaima.png" alt="Anime 5">
                 <div class="title">Dragon Ball Daima</div>
               </a>
             </div>
@@ -127,37 +127,37 @@
         <div class="card-row">
         <div class="card">
             <a href="pages/manga1.html" target="_blank">
-            <img src="images/berserk.png" alt="Berserk">
+            <img src="../images/berserk.png" alt="Berserk">
             <div class="title">Berserk</div>
             </a>
         </div>
         <div class="card">
             <a href="https://example7.com" target="_blank">
-            <img src="images/jojo.png" alt="JoJo no Kimyou na Bouken Part 7: Steel Ball Run">
+            <img src="../images/jojo.png" alt="JoJo no Kimyou na Bouken Part 7: Steel Ball Run">
             <div class="title">JoJo no Kimyou na Bouken Part 7...</div>
             </a>
         </div>
         <div class="card">
             <a href="https://example8.com" target="_blank">
-            <img src="images/vagabond.png" alt="Vagabond">
+            <img src="../images/vagabond.png" alt="Vagabond">
             <div class="title">Vagabond</div>
             </a>
         </div>
         <div class="card">
             <a href="https://example9.com" target="_blank">
-            <img src="images/onepiece.png" alt="One Piece">
+            <img src="../images/onepiece.png" alt="One Piece">
             <div class="title">One Piece</div>
             </a>
         </div>
         <div class="card">
             <a href="https://example10.com" target="_blank">
-            <img src="images/monster.png" alt="Monster">
+            <img src="../images/monster.png" alt="Monster">
             <div class="title">Moster</div>
             </a>
         </div>
         <div class="card">
             <a href="https://example11.com" target="_blank">
-            <img src="images/slamdunk.png" alt="Slam Dunk">
+            <img src="../images/slamdunk.png" alt="Slam Dunk">
             <div class="title">Slam Dunk</div>
             </a>
         </div>
@@ -200,10 +200,10 @@
           <div class="footer-social">
             <p>Follow Us</p>
             <div class="social-icons">
-              <a href="#"><img src="images/facebook.png" width=40px alt="Facebook"></a>
-              <a href="#"><img src="images/twitter.png" width=40px alt="Twitter"></a>
-              <a href="#"><img src="images/instagram.png" width=40px alt="Instagram"></a>
-              <a href="#"><img src="images/discord.png" width=40px alt="Discord"></a>
+              <a href="#"><img src="../images/facebook.png" width=40px alt="Facebook"></a>
+              <a href="#"><img src="../images/twitter.png" width=40px alt="Twitter"></a>
+              <a href="#"><img src="../images/instagram.png" width=40px alt="Instagram"></a>
+              <a href="#"><img src="../images/discord.png" width=40px alt="Discord"></a>
             </div>
           </div>
           <div class="footer-links">
