--- a/pages/seasonal_manga.html
+++ b/pages/seasonal_manga.html
@@ -21,7 +21,7 @@
                 <li class="dropdown">
                     <a href="#">Anime</a>
                     <div class="dropdown-content">
-                        <a href="pages/top-anime.html">Top Anime</a>
+                        <a href="../pages/top-anime.html">Top Anime</a>
                         <a href="#">Seasonal Anime</a>
                         <a href="#">All Time Hits</a>
                         <a href="#">Recommendations</a>
@@ -31,7 +31,7 @@
                     <a href="#">Manga</a>
                     <div class="dropdown-content">
                         <a href="#">Top Manga</a>
-                        <a href="pages/seasonal_manga">Seasonal Manga</a>
+                        <a href="../pages/seasonal_manga">Seasonal Manga</a>
                         <a href="#">All Time Hits</a>
                         <a href="#">Recommendations</a>
                     </div>
@@ -55,14 +55,7 @@
                 </li>
                 <li><a href="#">Watch</a></li>
                 <li><a href="#">Read</a></li>
-                <li class="dropdown">
-                    <a href="#">Help</a>
-                    <div class="dropdown-content">
-                        <a href="pages/top-anime.html">Top Anime</a>
-                        <a href="#">Seasonal Anime</a>
-                        <a href="#">All Time Hits</a>
-                        <a href="#">Recommendations</a>
-                    </div>
+                <li><a href="#">Help</a></li>
             </ul>
             <div class="search-container">
                 <select>
