--- a/pages/seasonal_manga.html
+++ b/pages/seasonal_manga.html
@@ -31,7 +31,7 @@
                     <a href="#">Manga</a>
                     <div class="dropdown-content">
                         <a href="#">Top Manga</a>
-                        <a href="../pages/seasonal_manga">Seasonal Manga</a>
+                        <a href="../pages/seasonal_manga.html">Seasonal Manga</a>
                         <a href="#">All Time Hits</a>
                         <a href="#">Recommendations</a>
                     </div>
