--- a/pages/seasonal_manga.html
+++ b/pages/seasonal_manga.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="website_name">
-            <a href="index.html"> <img src="../images/logo.png" width="150"></a>
+            <a href="../index.html"> <img src="../images/logo.png" width="150"></a>
         </div>
         <div class="homehead">
             <a href="anime1.html" target="_blank" class="banner-link">
