--- a/pages/top-anime.html
+++ b/pages/top-anime.html
@@ -22,7 +22,7 @@
                 <li class="dropdown">
                     <a href="#">Anime</a>
                     <div class="dropdown-content">
-                        <a href="pages/top-anime.html">Top Anime</a>
+                        <a href="../pages/top-anime.html">Top Anime</a>
                         <a href="#">Seasonal Anime</a>
                         <a href="#">All Time Hits</a>
                         <a href="#">Recommendations</a>
