--- a/pages/top-anime.html
+++ b/pages/top-anime.html
@@ -215,5 +215,65 @@
             </tbody>
         </table>
     </div>
+    <footer>
+        <div class="footer-content">
+          <div class="footer-sections">
+            <div class="footer-section">
+              <h3>Top Anime</h3>
+              <ul>
+                <li>1. Sousou no Frieren</li>
+                <li>2. One Piece Fan Letter</li>
+                <li>3. Fullmetal Alchemist: Brotherhood</li>
+                <li>4. Steins;Gate</li>
+                <li>5. Shingeki no Kyojin Season 3 Part 2</li>
+              </ul>
+            </div>
+            <div class="footer-section">
+              <h3>Top Airing Anime</h3>
+              <ul>
+                <li>1. Bleach: Sennen Kessen-hen</li>
+                <li>2. Re:Zero kara Hajimeru Isekai Seikatsu</li>
+                <li>3. One Piece</li>
+                <li>4. Natsume Yuujinchou Shichi</li>
+                <li>5. Dandadan</li>
+              </ul>
+            </div>
+            <div class="footer-section">
+              <h3>Most Popular Characters</h3>
+              <ul>
+                <li>1. Lamperouge, Lelouch</li>
+                <li>2. Levi</li>
+                <li>3. Monkey D., Luffy</li>
+                <li>4. Lawliet, L</li>
+                <li>5. Roronoa, Zoro</li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer-social">
+            <p>Follow Us</p>
+            <div class="social-icons">
+              <a href="#"><img src="../images/facebook.png" width=40px alt="Facebook"></a>
+              <a href="#"><img src="../images/twitter.png" width=40px alt="Twitter"></a>
+              <a href="#"><img src="../images/instagram.png" width=40px alt="Instagram"></a>
+              <a href="#"><img src="../images/discord.png" width=40px alt="Discord"></a>
+            </div>
+          </div>
+          <div class="footer-links">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Press Room</a>
+            <a href="#">Support</a>
+            <a href="#">Advertising</a>
+            <a href="#">FAQ</a>
+            <a href="#">Terms</a>
+            <a href="#">Privacy</a>
+            <a href="#">Cookie</a>
+            <a href="#">Notice at Collection</a>
+            <a href="#">Sitemap</a>
+            <a href="#">Login</a>
+            <a href="#">Sign Up</a>
+          </div>
+        </div>
+      </footer>
 </body>
 </html>
