--- a/pages/top-anime.html
+++ b/pages/top-anime.html
@@ -32,7 +32,7 @@
                     <a href="#">Manga</a>
                     <div class="dropdown-content">
                         <a href="#">Top Manga</a>
-                        <a href="#">Seasonal Manga</a>
+                        <a href="../pages/seasonal_manga.html">Seasonal Manga</a>
                         <a href="#">All Time Hits</a>
                         <a href="#">Recommendations</a>
                     </div>
